<resources>
    <string name="app_name">Run or Die</string>

    <!-- Strings related to Splash Screen -->
    <string name="splash_title">Run or Die</string>
    <string name="frag_home_title">Tracks</string>

    <!-- Strings related to Authorization Screen -->
    <string name="auth_title">Authorization</string>
    <string name="auth_et_email_hint">Email</string>
    <string name="auth_et_firstName_hint">First name</string>
    <string name="auth_et_lastName_hint">Last name</string>
    <string name="auth_et_password_hint">Password</string>
    <string name="auth_et_repeatPassword_hint">Repeat password</string>
    <string name="auth_btn_signIn_text">Sign in</string>
    <string name="auth_btn_signUp_text">Sign up</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_firstName">Invalid first name</string>
    <string name="error_invalid_lastName">Invalid last name</string>
    <string name="error_short_password">Password is too short</string>
    <string name="error_not_same_passwords">Passwords not the same</string>
    <string name="error_incorrect_password">This password is incorrect</string>


    <!-- Strings related to Home Screen -->
    <string name="frag_home_track_startTime_title">Start:</string>
    <string name="frag_home_track_distance_title">Distance:</string>
    <string name="frag_home_track_runTime_title">Run time:</string>


    <!-- Strings related to Run Screen -->
    <string name="run_title">Run or Die</string>
    <string name="run_distance_format">%1$d m</string>
    <string name="run_timer_format">%1$s:%2$s:%3$s.%4$s</string>
    <string name="location_access_request">To continue please turn on JPS.</string>
    <string name="location_access_denied">To continue please turn on JPS.</string>
    <string name="run_finish_error">Finish tracking before return</string>
    <string name="run_tv_timer_text">00:00:00.00</string>
    <string name="run_btn_finish_text">finish</string>

    <!-- Strings related to Drawer -->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="nav_view_main_title">Main</string>
    <string name="nav_view_notifications_title">Notifications</string>
    <string name="nav_view_footer_exit_title">Exit</string>

    <!-- Strings related to Track Fragment -->
    <string name="frag_track_title">Track details</string>
    <string name="frag_track_map_marker_start">START</string>
    <string name="frag_track_map_marker_finish">FINISH</string>
    <string name="frag_track_time_title">Time: </string>
    <string name="frag_track_distance_title">Distance: </string>
    <string name="format_runTime">%1$d:%2$d:%3$d</string>

    <!-- Strings related to Notification Fragment -->
    <string name="frag_notification_title">Notifications</string>
    <string name="notification_title_format">Notification %1$d</string>
    <string name="frag_notification_btn_save_text">save</string>

    <!-- Strings related to Notifications -->
    <string name="notification_content_title">Run or Die</string>
    <string name="notification_track_writing_msg">Writing new track</string>

    <!-- Strings related to SQL requests -->
    <string name="sql_select_notifications">
        SELECT n._id, n.executionTime, n.title FROM notification n ORDER BY n.executionTime
    </string>
    <string name="sql_insert_notification">
       INSERT INTO notification (executionTime, title) VALUES (?, ?)
    </string>
    <string name="sql_update_notification">UPDATE notification SET executionTime = ?, title = ? WHERE _id = ?</string>
    <string name="sql_delete_notification">DELETE FROM notification WHERE _id = ?</string>

    <string name="sql_select_track">
        SELECT t.runTime, t.distance, t.points FROM track t WHERE t._id = ?
    </string>
    <string name="sql_select_tracks">
        SELECT t._id, t.serverId, t.startTime, t.runTime, t.distance FROM track t ORDER BY t.startTime DESC
    </string>
    <string name="sql_select_tracks_no_serverId">
        SELECT t._id, t.startTime, t.runTime, t.distance, t.points FROM track t WHERE t.serverId is null OR t.serverId = \'\'
    </string>
    <string name="sql_select_tracks_serverId">
        SELECT serverId FROM track
    </string>
    <string name="sql_insert_track_no_serverId">
        INSERT INTO track (startTime, distance, runTime, points) VALUES (?, ?, ?, ?)
    </string>
    <string name="sql_insert_track">
        INSERT INTO track (startTime, serverId, distance, runTime, points) VALUES (?, ?, ?, ?, ?)
    </string>
    <string name="sql_update_track_serverId">UPDATE track SET serverId = ? WHERE _id = ?</string>

    <!-- Strings related to Errors -->

    <string name="default_error">Something went wrong!</string>
    <string name="invalid_credentials_error">Incorrect email or password!</string>
    <string name="internet_connection_error">No Internet connection</string>
    <string name="required_fields_are_empty_error">Required fields are empty</string>
    <string name="invalid_email_error">Invalid email</string>
    <string name="email_already_exists_error">Email already exists</string>
    <string name="invalid_token_error">Session expired</string>
    <string name="invalid_time_input">Invalid date or time</string>
    <string name="short_distance_error">Too short distance</string>

    <!-- Strings related to Permissions -->
    <string name="permission_dialog_title">Permission necessary</string>
    <string name="permission_access_fine_location">Location access</string>
    <string name="permission_access_fine_location_not_granted">JPS access not granted</string>
    <string name="permission_dialog_msg_format">%1$s is necessary.</string>

    <string name="ok">OK</string>
    <string name="no">Nope</string>
    <string name="yes">yes</string>


</resources>
